tests/positive/exceptions/basic/input.ci
void main() {
    try {
        assert(false, "boom");
    } catch (RuntimeException e) {
        print(e.message + "\n");
    }
    print("done\n");
}
