tests/negative/runtime/move_source_not_found/input.ci
void main() {
    move("nonexistent.txt", "dst.txt");
}
